--- a/public/css/main.css
+++ b/public/css/main.css
@@ -16,3 +16,31 @@ tfoot input {
      width: 90%;
      left: 5%;
 }
+
+.btn-file {
+    position: relative;
+    overflow: hidden;
+}
+.btn-file input[type=file] {
+    position: absolute;
+    top: 0;
+    right: 0;
+    min-width: 100%;
+    min-height: 100%;
+    font-size: 100px;
+    text-align: right;
+    filter: alpha(opacity=0);
+    opacity: 0;
+    outline: none;
+    background: white;
+    cursor: inherit;
+    display: block;
+}
+
+#calendar {
+  max-width: 900px;
+  margin: 0 auto;
+}
+
+.fc-state-highlight {background:rgb(40,0,0);}
+/*highlighter of fullcalendaer*/
