--- a/public/css/main.css
+++ b/public/css/main.css
@@ -113,3 +113,8 @@ tfoot input {
             margin: 0px auto;
             float: none;
         }
+
+
+        select[readonly] option, select[readonly] optgroup {
+            display: none;
+        }
